# shika

./: Cargo.toml
crates/shika/: Cargo.toml
crates/shika/src/: handler.rs  lib.rs  main.rs  prelude.rs  request.rs  response.rs  server.rs
crates/shika/src/extract/: extension.rs  headers.rs  mod.rs  query.rs
crates/shika_auth/: Cargo.toml
crates/shika_auth/src/: rbac.rs
crates/shika_core/: Cargo.toml
crates/shika_core/src/: exchange.rs  handler.rs  lib.rs  router.rs  server.rs
crates/shika_core/src/extract/: mod.rs  path.rs  query.rs
examples/api/: Cargo.toml
examples/api/src/: main.rs
examples/api_server/: Cargo.toml
examples/api_server/src/: main.rs
