[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
shika = { path = "crates/shika" }
shika_core = { path = "crates/shika_core" }
shika_auth = { path = "crates/shika_auth" }

tokio = { version = "1.38.0", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
http = { version = "1.1.0" }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = { version = "0.1.1" }
anyhow = { version = "1.0.86" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
serde = { version = "1.0.203", features = ["derive"] }
