[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples/*"
]

[workspace.dependencies]
shika = { path = "crates/shika" }
http = { version = "1.1.0" }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
http-body-util = { version = "0.1.2" }
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
serde_urlencoded = { version = "0.7.1" }